# FEAplusplus

./: CMakeLists.txt  Makefile  README.md  main.cpp
feaplusplus/: README.md
feaplusplus/include/: CMakeLists.txt
feaplusplus/include/common/: analysis_result.h  common.h
feaplusplus/include/fea/: fea.h  mesh.h
feaplusplus/include/geometry/: element.h  node.h
feaplusplus/include/loads/: distributed_load.h  load.h  point_load.h
feaplusplus/include/material/: material.h
feaplusplus/include/postprocessor/: postprocessor.h
feaplusplus/tests/: test_fea.cpp  test_geometry.cpp  test_loads.cpp  test_material.cpp  test_solvers.cpp
feapp/: CMakeLists.txt
feapp/libs/libfea/: CMakeLists.txt
feapp/libs/libfea/include/common/: analysis_result.h  common.h
feapp/libs/libfea/include/fea/: fea.h  mesh.h
feapp/libs/libfea/include/geometry/: element.h  node.h
feapp/libs/libfea/include/loads/: distributed_load.h  load.h  point_load.h
feapp/libs/libfea/include/material/: material.h
feapp/libs/libfea/include/preprocessor/: preprocessor.h
feapp/libs/libfea/include/processor/: postprocessor.h  preprocessor.h
feapp/libs/libfea/include/solvers/: direct_solver.h  iterative_solver.h  solver.h  sparse_solver.h
feapp/libs/libfea/src/fea/: fea.cpp  mesh.cpp
feapp/libs/libfea/src/geometry/: element.cpp  node.cpp
feapp/libs/libfea/src/loads/: distributed_load.cpp  point_load.cpp
feapp/libs/libfea/src/material/: material.cpp
feapp/libs/libfea/src/processor/: postprocessor.cpp  preprocessor.cpp
feapp/libs/libfea/tests/: test_fea.cpp  test_geometry.cpp  test_loads.cpp  test_material.cpp  test_solvers.cpp
include/fea/: fea.h  mesh.h
include/geometry/: node.h
include/loads/: distributed_load.h  load.h
include/material/: material.h
src/: CMakeLists.txt
src/loads/: distributed_load.cpp
src/material/: material.cpp
src/postprocessor/: postprocessor.cpp
src/preprocessor/: preprocessor.cpp
src/solvers/: iterative_solver.cpp
tests/: CMakeLists.txt  test_fea.cpp  test_geometry.cpp  test_material.cpp  test_solvers.cpp
(+18 files in other folders)
